Fixed headline z-index

--- a/app/ui/app/app-ui-comp-component-tree.less
+++ b/app/ui/app/app-ui-comp-component-tree.less
@@ -31,7 +31,7 @@
 
     #console {
         position:           absolute;
-        bottom:             30px;
+        bottom:             5px;
         left:               5px;
 
         &:hover {
@@ -93,6 +93,7 @@
         width:              80px;
         position:           absolute;
         bottom:             5px;
+        pointer-events:     none;
         padding:            5px;
         border:             1px solid;
         right:              5px;
