--- a/app/ui/app/app-ui-widget-panel.less
+++ b/app/ui/app/app-ui-widget-panel.less
@@ -20,6 +20,8 @@
     width:      100%;
     height:     ~"calc(100% - 24px - 16px)";
     color:      @color-tab-fg;
+    z-index:    99 !important;
+    position:   relative;
 
     .tabs {
         height:  (@font-size + 4 + 4 + 1);
